--- a/letterbox/src/Films.css
+++ b/letterbox/src/Films.css
@@ -6,6 +6,7 @@
   row-gap: 2em;
 
   background: linear-gradient(#2c3440, rgb(21, 24, 28) 10%);
+  overflow-x: hidden;
 }
 
 #navbar {
